add new table and refector de code